--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <h1>Developer <span>X</span></h1>
+                <h1>Developer <span>Ahad</span></h1>
 
             </div>
             <ul>
@@ -32,7 +32,7 @@
             <div class="mainText">
                 <h3>Hello I am</h3>
                 <h1>Abdul <span>Ahad</span></h1>
-                <p>Front end Developer</p>
+                <p>FrontEnd Developer</p>
                 <button id="cvBtn">Download CV</button>
 
             </div>
@@ -46,10 +46,10 @@
             <div class="about">
                 <img src="man.png" alt="">
                 <div class="aboutText">
-                    <h2>Hello i am Front end <span>Developer</span></h2>
+                    <h2>Hello i am Front End <span>Developer</span></h2>
                     <p>Experience :<span>freshers</span></p>
                     <p>Speciality :<span>Frontend Development</span></p>
-                    <p>Skills :<span>MERN</span></p>
+                    <p>Skills :<span>HTML,CSS,Javascript & ReactJs</span></p>
                     <p>Email :<span>ahmadahad283@gmail.com</span></p>
                 </div>
             </div>
@@ -83,10 +83,64 @@
             </div>
             <div class="mywork">
                 <div class="workcard">
-                    <img src="" alt="">
+                    <img src="w1.jpg" alt="">
                     <p></p>
                     <a href=""></a>
                 </div>
+                <div class="workcard">
+                    <img src="w2.jpg" alt="">
+                    <p></p>
+                    <a href=""></a>
+                </div>
+                <div class="workcard">
+                    <img src="w3.jpg" alt="">
+                    <p></p>
+                    <a href=""></a>
+                </div>
+            </div>
+        </div>
+        <div class="connect">
+            <div class="head">
+                <h1>Contact<span>Us</span></h1>
+            </div>
+            <div class="contact">
+                <p>Email :</p>
+                <input type="text" placeholder="Enter Email" id="email">
+                <p>Password :</p>
+                <input type="text" placeholder="Enter Password" id="pass">
+                <p>Message :</p>
+                <input type="text" placeholder="Enter Message" id="msg">
+                <button id="submit">Submit</button>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="text">
+                <h3>Connect here</h3>
+                <p>WhatsApp</p>
+                <p>Instagram</p>
+                <p>Snapchat</p>
+                <p>Facebook</p>
+            </div>
+            <div class="text">
+                <h3>My Work</h3>
+                <p>Quality</p>
+                <p>Good</p>
+                <p>Best Price</p>
+                <p>Best</p>
+            </div>
+            <div class="text">
+                <h3>Effort</h3>
+                <p>Affordable</p>
+                <p>Good</p>
+                <p>Best Price</p>
+                <p>Quality</p>
+            </div>
+            <div class="text">
+                <h3>Contact</h3>
+                <p>Email</p>
+                <p>Phone</p>
+                <p>Message</p>
+                <p>7787923148</p>
             </div>
         </div>
 
