--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -25,7 +25,7 @@
                 <li><a href="">My work</a></li>
                 <li><a href="">Contact Us</a></li>
             </ul>
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars" id="bar"></i>
         </nav>
 
         <div class="main">
@@ -47,16 +47,17 @@
                 <img src="man.png" alt="">
                 <div class="aboutText">
                     <h2>Hello i am Front End <span>Developer</span></h2>
-                    <p>Experience :<span>freshers</span></p>
-                    <p>Speciality :<span>Frontend Development</span></p>
-                    <p>Skills :<span>HTML,CSS,Javascript & ReactJs</span></p>
-                    <p>Email :<span>ahmadahad283@gmail.com</span></p>
+                    <p>Experience : <span>Freshers</span></p>
+                    <p>Speciality : <span> Frontend Development</span></p>
+                    <p>Skills : <span> HTML,CSS,Javascript & ReactJs</span></p>
+                    <p>Email : <span> ahmadahad283@gmail.com</span></p>
+                    <p>Phone : <span> +917787923148</span></p>
                 </div>
             </div>
         </div>
         <div class="services">
             <div class="head">
-                <h1>Our<span>Services</span></h1>
+                <h1>Our<span> Services</span></h1>
             </div>
             <div class="service">
                 <div class="card">
@@ -81,27 +82,27 @@
             <div class="head">
                 <h1>My <span>Works</span></h1>
             </div>
-            <div class="mywork">
-                <div class="workcard">
+            <div class="myWork">
+                <div class="workCard">
                     <img src="w1.jpg" alt="">
                     <p></p>
-                    <a href=""></a>
+                    <a href="">checkout</a>
                 </div>
-                <div class="workcard">
+                <div class="workCard">
                     <img src="w2.jpg" alt="">
                     <p></p>
-                    <a href=""></a>
+                    <a href="">checkout</a>
                 </div>
-                <div class="workcard">
+                <div class="workCard">
                     <img src="w3.jpg" alt="">
                     <p></p>
-                    <a href=""></a>
+                    <a href="">checkout</a>
                 </div>
             </div>
         </div>
         <div class="connect">
             <div class="head">
-                <h1>Contact<span>Us</span></h1>
+                <h1>Contact<span> Us</span></h1>
             </div>
             <div class="contact">
                 <p>Email :</p>
