--- a/Amazon UI/index.html
+++ b/Amazon UI/index.html
@@ -136,6 +136,68 @@
         </div>
     </div>
 
+    <footer>
+        <div class="footer-panel1">
+            Back to Top
+        </div>
+
+        <div class="footer-panel2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blogs</a>
+                <a>About Amazon</a>
+                <a>Invester Relation</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Secince</a>
+            </ul>
+            <ul>
+                <p>Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blogs</a>
+                <a>About Amazon</a>
+                <a>Invester Relation</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Secince</a>
+            </ul>
+            <ul>
+                <p>Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blogs</a>
+                <a>About Amazon</a>
+                <a>Invester Relation</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Secince</a>
+            </ul>
+            <ul>
+                <p>Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blogs</a>
+                <a>About Amazon</a>
+                <a>Invester Relation</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Secince</a>
+            </ul>
+        </div>
+
+        <div class="footer-panel3">
+            <div class="logo">
+                
+            </div>
+        </div>
+
+        <div class="footer-panel4">
+            <div class="pages">
+                <a>Condition of Use</a>
+                <a>Privacy Notice</a>
+                <a>Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyright">
+                © 1996-2024, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
